<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".MiniMedGamesActivity">

    <Button
        android:id="@+id/nxtQuest_Btn2"
        android:layout_width="168dp"
        android:layout_height="69dp"
        android:background="@drawable/buttons_layout1"
        android:text="@string/next_easy_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <Button
        android:id="@+id/showAns_Btn2"
        android:layout_width="168dp"
        android:layout_height="69dp"
        android:background="@drawable/buttons_layout1"
        android:text="@string/show_easy_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

    <ImageView
        android:id="@+id/midProbview"
        android:layout_width="414dp"
        android:layout_height="484dp"
        android:contentDescription="@string/problems"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/problem_medium_1" />

    <TextView
        android:id="@+id/text2View"
        android:layout_width="292dp"
        android:layout_height="68dp"
        android:gravity="center"
        android:text="@string/practice_exercise"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        tools:text="Practice Exercises!" />
</androidx.constraintlayout.widget.ConstraintLayout>