<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".MiniEasyGamesActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="292dp"
        android:layout_height="68dp"
        android:gravity="center"
        android:text="@string/practice_exercise"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        tools:text="Practice Exercises!" />

    <ImageView
        android:id="@+id/easyProbview"
        android:layout_width="407dp"
        android:layout_height="531dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/problems"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/problem_easy_1" />

    <Button
        android:id="@+id/nxtQuest_Btn"
        android:layout_width="168dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/buttons_layout1"
        android:text="@string/next_easy_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/showAns_Btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <Button
        android:id="@+id/showAns_Btn"
        android:layout_width="168dp"
        android:layout_height="69dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttons_layout1"
        android:text="@string/show_easy_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nxtQuest_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />


</androidx.constraintlayout.widget.ConstraintLayout>