<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin"
    android:paddingBottom="@dimen/vertical_margin"
    android:background="@drawable/background1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:contentDescription="@string/numbuddy_logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126">

    </ImageView>

    <ImageView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:contentDescription="@string/numbuddy"
        android:src="@drawable/app_title"
        app:tint="@color/dark_gray_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        app:layout_constraintVertical_bias="0.0">

    </ImageView>

    <Button
        android:id="@+id/uniCon_Btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttons_layout1"
        android:fontFamily="@font/gelion_black"
        android:text="@string/unit_converter"
        android:textAllCaps="false"
        android:textColor="@color/soft_cyan"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/formula_Btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons_layout1"
        android:fontFamily="@font/gelion_black"
        android:text="@string/formulas"
        android:textAllCaps="false"
        android:textColor="@color/soft_cyan"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/uniCon_Btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/uniCon_Btn"
        app:layout_constraintTop_toBottomOf="@+id/uniCon_Btn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/minGme_Btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons_layout1"
        android:fontFamily="@font/gelion_black"
        android:text="@string/mini_games"
        android:textAllCaps="false"
        android:textColor="@color/soft_cyan"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/formula_Btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/formula_Btn"
        app:layout_constraintTop_toBottomOf="@+id/formula_Btn"
        app:layout_constraintVertical_bias="0.015" />

</androidx.constraintlayout.widget.ConstraintLayout>