<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2">

    <Button
        android:id="@+id/Geometry_Btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/buttons_layout2"
        android:fontFamily="@font/gelion_black"
        android:text="@string/geometry"
        android:textAllCaps="false"
        android:textColor="@color/soft_cyan"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Trigonometry_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Algebra_Btn" />

    <Button
        android:id="@+id/Trigonometry_Btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/buttons_layout2"
        android:fontFamily="@font/gelion_black"
        android:text="@string/trigonometry"
        android:textAllCaps="false"
        android:textColor="@color/soft_cyan"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Geometry_Btn"
        app:layout_constraintTop_toBottomOf="@+id/Arithmetic_Btn" />

    <Button
        android:id="@+id/Algebra_Btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="82dp"
        android:background="@drawable/buttons_layout2"
        android:fontFamily="@font/gelion_black"
        android:text="@string/algebra"
        android:textAllCaps="false"
        android:textColor="@color/soft_cyan"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Geometry_Btn"
        app:layout_constraintEnd_toStartOf="@+id/Arithmetic_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Arithmetic_Btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="82dp"
        android:background="@drawable/buttons_layout2"
        android:fontFamily="@font/gelion_black"
        android:text="@string/arithmetic"
        android:textAllCaps="false"
        android:textColor="@color/soft_cyan"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Trigonometry_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Algebra_Btn"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
