<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".MiniGamesActivity">

    <Button
        android:id="@+id/miniEasy_Btn"
        android:layout_width="175dp"
        android:layout_height="64dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/buttons_layout2"
        android:fontFamily="@font/gelion_medium"
        android:text="@string/easy_button"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minigamesTxt"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/miniMid_Btn"
        android:layout_width="175dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttons_layout2"
        android:fontFamily="@font/gelion_medium"
        android:text="@string/medium_button"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miniEasy_Btn" />

    <Button
        android:id="@+id/miniHard_Btn"
        android:layout_width="175dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttons_layout2"
        android:fontFamily="@font/gelion_medium"
        android:text="@string/hard_button"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miniMid_Btn"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/minigamesTxt"
        android:layout_width="269dp"
        android:layout_height="58dp"
        android:fontFamily="@font/gelion_bold"
        android:text="@string/mini_Games"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/soft_cyan"
        android:textSize="40sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sample_logo_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211"
        app:srcCompat="@drawable/sample_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>